fix(budgets): atender apontamentos de review e sonarqube no motor grafico [US-10.3]
- Substitui parsing manual por Jackson ObjectMapper em TemplateVisualContextResolver (evita bug de captura em nulls/numericos)

- Reduz complexidade cognitiva de metodos de extracao decompondo em funcoes privadas menores (SRP)

- Elimina duplicacao de literal criando constante BRONZE (java:S1192)

- Refina tratamento de excecao para JsonProcessingException (java:S2221)

- Aplica Math.clamp do Java 21 em SwingDoor e SlidingThumbnailStrategy (java:S6885)

- Remove campos mortos aspectRatio e hasGlass de TemplateVisualContext (YAGNI/java:S1068)

- Adiciona desregistro de template no tearDown para isolamento estatico dos testes

- Parametriza testes de tipologia e aliases com ValueSource (java:S5976)

- Eleva cobertura de branches no JaCoCo para 90.8% com testes exaustivos de paletas, produtos e json